Remove JAX-RS from CSW Endpoint